项目细节完善1
🔧 4个关键问题的修复
🚀 2个重要功能的实现
📈 显著的用户体验提升
📋 完整的开发文档记录

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,16 @@ pids/
 # Hosting platform caches (optional)
 .vercel/
 .netlify/
+
+# Development logs & change tracking
+CHANGELOG.local.md
+CHANGELOG.dev.md
+change-log.md
+changlog.md
+*.changelog
+.changes/
+dev-notes.md
+DEV_LOG_*.md
+dev-log-*.md
+development-log-*.md
+daily-log-*.md
